Yamls/ShinyApps/eutopia.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: eutopia-service
  namespace: shiny-apps
spec:
  type: NodePort
  selector:
    app: eutopia-app
  ports:
  - protocol: TCP
    port: 3838
    targetPort: 3838
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eutopia-app
  namespace: shiny-apps
spec:
  selector:
    matchLabels:
      app: eutopia-app
  replicas: 1
  template:
    metadata:
      name: eutopia-app
      labels:
        app: eutopia-app
    spec:
      containers:
      - name: eutopia-app
        image: grecolab/eutopia
        imagePullPolicy: Always
        ports:
        - containerPort: 3838
          name: eutopia
