Yamls/ShinyApps/eutopiaingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eutopia-app-secure
  namespace: shiny-apps
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts: 
    - eutopia.cloud.nanosolveit.eu
    secretName: eutopia-app-cert
  rules:
  - host: eutopia.cloud.nanosolveit.eu
    http:
      paths:
      - backend:
          serviceName: eutopia-service
          servicePort: 3838
        path: /
